fix large hero size on small screens

--- a/src/components/hero/style.module.scss
+++ b/src/components/hero/style.module.scss
@@ -6,11 +6,15 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 700px;
+  height: 620px;
   background: transparent linear-gradient(180deg, $color_indigo_800 0%, $color_indigo_900 100%) 0% 0% no-repeat padding-box;
   text-align: center;
   color: $color_text_contrasted;
   position: relative;
+}
+
+.hero-small {
+  height: 500px;
 }
 
 .hero::after {
