--- a/src/components/projects/style.module.scss
+++ b/src/components/projects/style.module.scss
@@ -5,13 +5,14 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-top: -6rem;
+  margin-top: -3rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid $color_gray_500;
 }
 
 @media (min-width: $site_breakpoint_md) {
   .projects {
+    margin-top: -6rem;
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
