--- a/src/templates/style.module.scss
+++ b/src/templates/style.module.scss
@@ -4,7 +4,7 @@
 
 .project-image {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   margin-top: -8rem;
   border-radius: 8px;
   box-shadow: $shadow_box_subtle;
